tests-integration/fixtures/checking/231_record_expression_nested_additional/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
test :: { outer :: { x :: Int } }

Types

Diagnostics
error[AdditionalProperty]: Additional properties not allowed: y
  --> 3:1..3:34
  |
3 | test :: { outer :: { x :: Int } }
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
